Drop `MemoryAddress::freeMemory`/`MemoryAddress::allocateMemory` leftovers